--- a/app_success_predictio_model.ipynb
+++ b/app_success_predictio_model.ipynb
@@ -55,7 +55,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 1. **Data Exploration**"
+        "##  **1. Data Exploration**"
       ],
       "metadata": {
         "id": "I9woZqSWZi_M"
@@ -2571,7 +2571,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 3.1 **Feature Engineering**"
+        "### 3.1 **Feature Engineering**\n",
+        "In this section, we created new features,where:\n",
+        "\n",
+        "`min_android_version`: Extracts the minimum Android version to provide more meaningful information than the string \"4.4 and up\".\n",
+        "\n",
+        "`size_category`: Groups app sizes into categories to be inclusive of the \"varies with device\" option and make them easier to process.\n",
+        "\n",
+        "`install_category`: Bins install_count into categories (e.g., Low, Medium, High) to reduce the impact of outliers and for better classification of app success.\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "yHNdk3tMIfao"
@@ -4952,7 +4961,7 @@
       "cell_type": "markdown",
       "source": [
         "## **4. Modelling**\n",
-        "The modeling phase involves building predictive models to classify the success of mobile applications based on various features. This phase utilizes machine learning techniques to develop models that can effectively predict the `Install_Category` of applications, categorized as Low, Medium, or High, based on the encoded features derived from the dataset."
+        "This phase focuses on building predictive models to classify mobile app success (Low, Medium, or High installs) using insights from our data. We'll explore various machine learning algorithms, including Logistic Regression, Random Forest, XGBoost, LightGBM, and a Neural Network. Our primary success metric is the macro F1-score, ensuring balanced performance across all success categories. We'll fine-tune models, evaluate them, and select the best performer for real-time app success prediction, empowering data-driven decisions"
       ],
       "metadata": {
         "id": "tzfhBIaMpRri"
@@ -5063,6 +5072,19 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 4.3 **Preprocessing Pipeline**\n",
+        "The Preprocessing pipelines previously created will be used to handle different types of features:\n",
+        "- Binary Encoding for Category and Content Rating, which reduces dimensionality.\n",
+        "- Ordinal Encoding for categorical features such as Type and Size_Category.\n",
+        "- Standard Scaling for numerical features to standardize their range."
+      ],
+      "metadata": {
+        "id": "XTNMyo0y9OCn"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Specify categorical and numerical columns\n",
@@ -5088,17 +5110,71 @@
     {
       "cell_type": "code",
       "source": [
-        "#saving the encoders\n",
-        "joblib.dump(preprocessor, 'preprocessor.joblib')"
+        "# Save custom transformers\n",
+        "joblib.dump(BinaryEncoderTransformer, 'binary_encoder_transformer.joblib')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FiSxnj61RPTR",
-        "outputId": "7ea42427-d9c2-4541-a853-acd1e2cb6097"
+        "outputId": "08851c8f-1f95-4bb7-84a5-2cfda88323ea"
       },
-      "execution_count": null,
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['binary_encoder_transformer.joblib']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 99
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "joblib.dump(OrdinalEncoderTransformer, 'ordinal_encoder_transformer.joblib')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U0BzbPBEnHWO",
+        "outputId": "d4169f57-cfe3-4695-aff0-c7c688c5686a"
+      },
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['ordinal_encoder_transformer.joblib']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 100
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Save the preprocessor pipeline\n",
+        "joblib.dump(preprocessor, 'preprocessor.joblib')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "38EJ8ZLPnFmy",
+        "outputId": "53186b42-3b59-471b-a0d8-9221a5b212da"
+      },
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5108,7 +5184,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 87
+          "execution_count": 101
         }
       ]
     },
@@ -5141,31 +5217,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 4.3 **Preprocessing Pipeline**\n",
-        "The Preprocessing pipelines previously created will be used to handle different types of features:\n",
-        "- Binary Encoding for Category and Content Rating, which reduces dimensionality.\n",
-        "- Ordinal Encoding for categorical features such as Type and Size_Category.\n",
-        "- Standard Scaling for numerical features to standardize their range."
-      ],
-      "metadata": {
-        "id": "XTNMyo0y9OCn"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Handling Class Imbalance"
-      ],
-      "metadata": {
-        "id": "G91xG4wG0vzb"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "### 4.4 **Model Selection**\n",
-        "- A baseline model, Logistic Regression, is chosen to establish a benchmark for model performance.\n",
-        "- Additional models, including Random Forest, Support Vector Machines (SVM), K-Nearest Neighbors (KNN), and a Deep Learning model, will be explored to enhance predictive accuracy."
+        "This phase involves building and evaluating machine learning models to predict app success levels ('Low,' 'Medium,' or 'High' installs). We'll explore Logistic Regression, Random Forest, XGBoost, LightGBM, and a Neural Network, aiming for the best macro F1-score."
       ],
       "metadata": {
         "id": "gw5Js4WD9izR"
@@ -5724,7 +5777,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Neural Network"
+        "#### 4.4.5 Neural Network"
       ],
       "metadata": {
         "id": "oLgnnsM3lHh5"
@@ -5791,7 +5844,7 @@
         "id": "2GYbz7eTDvnM",
         "outputId": "7a354c2a-883a-4f15-bb56-f72d89ae5360"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5870,7 +5923,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Ensemble methods"
+        "#### 4.4.6 Ensemble methods"
       ],
       "metadata": {
         "id": "lpceK-12XmBw"
@@ -6289,9 +6342,166 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#download custom binary and ordinal transformers\n",
+        "files.download('binary_encoder_transformer.joblib')\n",
+        "files.download('ordinal_encoder_transformer.joblib')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "id": "oCg7ODMsnS-n",
+        "outputId": "84cf3d32-b94d-432d-b90b-4fdcfb56444d"
+      },
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_0e768434-1d32-4ed0-b43b-30c5994ca9b4\", \"binary_encoder_transformer.joblib\", 52)"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_c87cf6e4-34ae-4230-bd34-6b07febdd0a4\", \"ordinal_encoder_transformer.joblib\", 53)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "**Recommendation**\n",
+        "## **5. Justification**\n",
+        "Our best-performing model, the Stacking Model, demonstrates robust predictive power despite not fully reaching the 0.7 Macro F1-score target, achieving a respectable 0.66. This performance is particularly noteworthy due to the balanced precision and recall observed across all install categories (High, Low, Medium). The model exhibits precision and recall rates ranging from 0.56 to 0.74 across these categories, signifying its consistent ability to correctly identify apps belonging to each category without significant bias. This balanced performance, even without achieving the target metric, underscores the model's reliability and potential for real-world application in predicting app success"
+      ],
+      "metadata": {
+        "id": "OSngCFt-YxJg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **6. Recommendation**\n",
         "\n",
         "* Focus on Free Apps: The analysis clearly shows that free apps consistently attract more installs than paid apps. Developers should prioritize a freemium model or completely free apps to maximize their reach and user engagement.\n",
         "\n",
@@ -6308,24 +6518,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Justification\n",
-        "Our best-performing model, the Stacking Model, demonstrates robust predictive power despite not fully reaching the 0.7 Macro F1-score target, achieving a respectable 0.66. This performance is particularly noteworthy due to the balanced precision and recall observed across all install categories (High, Low, Medium). The model exhibits precision and recall rates ranging from 0.56 to 0.74 across these categories, signifying its consistent ability to correctly identify apps belonging to each category without significant bias. This balanced performance, even without achieving the target metric, underscores the model's reliability and potential for real-world application in predicting app success"
-      ],
-      "metadata": {
-        "id": "OSngCFt-YxJg"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "dcNSIx2vdyEb"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Conclusion**\n",
+        "## **7. Conclusion**\n",
         "\n",
         "The analysis provides valuable insights into the factors influencing app success, such as app type, category, content rating, and size. By aligning app development strategies with these factors, developers can increase their chances of success in a competitive market. Models like Random Forest and XGBoost show strong performance in classifying app success, indicating their potential for use in predictive modeling for app performance."
       ],
